# macports-smtpselfservice

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  pyproject.toml  tox.ini
smtpselfservice/: __init__.py  config.py  forms.py  github.py  wsgi.py
smtpselfservice/static/: selfservice.css
smtpselfservice/templates/: base.html  home.html  settings.html
