# SPDX-License-Identifier: BSD-2-Clause

[tool.poetry]
name = "smtpselfservice"
version = "0.0.1"
description = "web application to allow macports developers to set their SMTP password"
authors = ["Clemens Lang <cal@macports.org>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
Flask = "^1.1.2"
passlib = "^1.7.4"
argon2_cffi = "^20.1.0"
flask-wtf = "^0.14.3"
psycopg2 = "^2.8.6"
diceware = "^0.9.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest-pylint = "^0.18.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
