# SPDX-License-Identifier: BSD-2-Clause

[tool.poetry]
name = "smtpselfservice"
version = "0.0.1"
description = "web application to allow macports developers to set their SMTP password"
authors = ["Clemens Lang <cal@macports.org>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
Flask = "^2.2.2"
passlib = "^1.7.4"
argon2_cffi = "^21.3.0"
flask-wtf = "^1.0.1"
psycopg2 = "^2.9.5"
diceware = "^0.10"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.7"
pytest-pylint = "^0.19.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
