# SPDX-License-Identifier: BSD-2-Clause

[tool.poetry]
name = "smtpselfservice"
version = "0.0.2"
description = "web application to allow macports developers to set their SMTP password"
authors = ["Clemens Lang <cal@macports.org>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
Flask = "^3.0.0"
passlib = "^1.7.4"
argon2_cffi = "^23.1.0"
flask-wtf = "^1.2.1"
psycopg = "^3.1.17"
diceware = "^0.10"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pylint = "^3.0.3"
pytest-pylint = "^0.21.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
